# spotify-clusters

./: .cache  .env  .env.example  .env_example  .flake8  .gitattributes  .gitignore  DEPLOYMENT_READY.md  DEVELOPMENT.md  FINAL_IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  STARTUP_GUIDE.md  SYSTEM_STATUS.md  UX_ENHANCEMENTS.md  df_clean.pkl  df_pca.pkl  kmeans_model.pkl  main.ipynb  main.py  pca_transformer.pkl  pyproject.toml  requirements.txt  run.bat  run.sh  run_webapp.py  song_features_cache.json  standard_scaler.pkl  start_app.py  top_features.txt
.ipynb_checkpoints/: README-checkpoint.md  main-checkpoint.ipynb
config/: .env.example
data/.ipynb_checkpoints/: .gitattributes
docs/: PROJECT_STRUCTURE.md
notebooks/: main.ipynb
scripts/: run_webapp.py
scripts/dev/: dev_server.py  quality_check.py
src/: recommendation_engine.py
src/models/: df_clean.pkl  df_pca.pkl  kmeans_model.pkl  minmax_scaler_tempo.pkl  pca_transformer.pkl  standard_scaler.pkl
src/utils/: __init__.py  logging_config.py  performance.py
src/web/: app.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: index.html
tests/: conftest.py  test_basic_functionality.py  test_recommendation_engine.py  test_web_app.py
